# git-helper

./: .gitignore  .gitmodules  .travis.yml  README.md  git-helper.cabal  package.yaml  stack.yaml
app/: CLIFlags.hs  FixFixWordCommitMode.hs  Main.hs  PrepareRemotesMode.hs  Remotes2LocalMode.hs
src/: ProcessLib.hs
