name:                git-helper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ki11men0w/git-helper#readme
license:             BSD3
license-file:        LICENSE
author:              Maksim Golubev
maintainer:          maksim.golubev72@gmail.com
copyright:           2017 Maksim Golubev
category:            Git
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable gith
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , git-utils >= 0.1.0.0
                     , process
                     , cmdargs
  default-language:    Haskell2010
  other-modules:       Paths_git_helper
                     , CLIFlags
                     , PrepareRemotesMode

test-suite gith-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ki11men0w/git-helper
